--- a/src/components/auth/styles.scss
+++ b/src/components/auth/styles.scss
@@ -3,7 +3,7 @@
   background-color: #eee;
   padding: 24px;
   width: 320px;
-  height: 450px;
+  // height: 450px;
 
   form {
     display: flex;
@@ -21,5 +21,12 @@
     text-align: right;
   }
 
-  
+  &.auth-wrap-login {
+    height: 280px;
+  }
+
+  &.auth-wrap-signup {
+    height: 450px;
+  }
+
 }
