--- a/src/components/workSpace/styles.scss
+++ b/src/components/workSpace/styles.scss
@@ -7,6 +7,11 @@
     padding: 24px;
     // border-bottom: 1px solid #bbb;
     border-top: 1px solid #bbb;
+
+    .ant-table-row {
+      background-color: #ddd;
+    }
+
     input, textarea {
       width: 50vw;
     }
@@ -27,6 +32,22 @@
   .nd-workspace-invitations-wrapper {
     padding: 24px;
     border-top: 1px solid #bbb;
+    background-color: #eee;
+
+    .ant-table-row {
+      background-color: #ddd;
+
+      td {
+        padding: 4px 16px;
+      }
+      .ant-btn {
+        padding: 0;
+
+        &:hover {
+          color: darkblue;
+        }
+      }
+    }
   }
 }
   
