- refactoring code - add Leaves, Todo, Profile

--- a/src/components/calendar/styles.scss
+++ b/src/components/calendar/styles.scss
@@ -1,5 +1,22 @@
- .ant-fullcalendar-content {
-   span {
-     
-   }
- }  
+.ant-fullcalendar-content {
+  span {
+    font-size: 40px;
+    // user-select: none;
+
+    &.holiday-date {
+      color: red;
+    }
+    &.vacation-paid {
+      color: green;
+    }
+    &.vacation-unpaid {
+      color: orange;
+    }
+    &.vacation-sick {
+      color: plum;
+    }
+    &.vacation-wfh {
+      color: purple;
+    }
+  }
+}
