--- a/src/components/mainMenu/styles.scss
+++ b/src/components/mainMenu/styles.scss
@@ -2,6 +2,7 @@
   background-color: #ddd;
   border-top: 1px solid #bbb;
   border-bottom: 1px solid #bbb;
+  display: flex;
 
   button.ant-btn-link {
     border-radius: 0px;
@@ -9,7 +10,26 @@
     &:hover {
       background-color: #bbb;
       border-radius: none;
-    }  
+    }
+    &.nd-btn-current-ws {
+      margin-left: auto;
+      color: #1890ff;
+    } 
+  }
+  .ant-badge .ant-badge-count{
+    font-size: 10px;
+    min-height: 16px;
+    height: 16px;
+    min-width: 16px;
+    width:  16px;
+    top: 8px;
+    right: 8px;
+    padding: 0;
+
+    p.current {
+      height: 16px;
+      line-height: 16px;
+    }
   }
   
 }
