--- a/src/components/auth/styles.scss
+++ b/src/components/auth/styles.scss
@@ -1,9 +1,8 @@
 .auth-wrap {
-  border: 1px solid #bbb;
-  background-color: #eee;
-  padding: 24px;
   width: 320px;
-  // height: 450px;
+  padding: 24px;
+  border: 1px solid #bbbbbb;
+  background-color: #eeeeee;
 
   form {
     display: flex;
