--- a/src/components/mainMenu/styles.scss
+++ b/src/components/mainMenu/styles.scss
@@ -1,30 +1,33 @@
 .nd-main-wrapper {
-  background-color: #ddd;
-  border-top: 1px solid #bbb;
-  border-bottom: 1px solid #bbb;
   display: flex;
+  border-top: 1px solid #bbbbbb;
+  border-bottom: 1px solid #bbbbbb;
+  background-color: #dddddd;
 
   button.ant-btn-link {
-    border-radius: 0px;
     color: black;
+    border-radius: 0;
+
     &:hover {
-      background-color: #bbb;
       border-radius: none;
+      background-color: #bbbbbb;
     }
+
     &.nd-btn-current-ws {
       margin-left: auto;
       color: #1890ff;
     }
   }
+
   .ant-badge .ant-badge-count {
-    font-size: 10px;
-    min-height: 16px;
-    height: 16px;
-    min-width: 16px;
-    width: 16px;
     top: 8px;
     right: 8px;
+    width: 16px;
+    min-width: 16px;
+    height: 16px;
+    min-height: 16px;
     padding: 0;
+    font-size: 10px;
 
     p.current {
       height: 16px;
