--- a/src/components/auth/authLayout/styles.scss
+++ b/src/components/auth/authLayout/styles.scss
@@ -3,4 +3,11 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
+
+  .nd-logo {
+    padding-bottom: 24px;
+    font-size: 24px;
+    text-align: center;
+    color: #666666;
+  }
 }
