--- a/src/components/mainMenu/styles.scss
+++ b/src/components/mainMenu/styles.scss
@@ -1,5 +1,4 @@
 .nd-main-wrapper {
-  max-width: 1000px;
   margin: 0 54px;
   border-right: 1px solid #bbbbbb;
   border-left: 1px solid #bbbbbb;
@@ -86,5 +85,12 @@
         color: darkblue;
       }
     }
+  }
+}
+
+.ant-modal-content,
+form {
+  .ant-btn + .ant-btn {
+    margin-left: 16px;
   }
 }
