--- a/src/components/auth/styles.scss
+++ b/src/components/auth/styles.scss
@@ -1,8 +1,10 @@
+@import './../../theme/theme';
+
 .auth-wrap {
   padding: 40px;
-  border: 1px solid #bbbbbb;
+  border: 1px solid $border-primary-color;
   border-radius: 4px;
-  background-color: #eeeeee;
+  background-color: $bck-secondary-color;
 
   form {
     display: flex;
