--- a/src/components/calendar/styles.scss
+++ b/src/components/calendar/styles.scss
@@ -1,10 +1,12 @@
+@import './../../theme/theme';
+
 .nd-calendar-wrapper {
   max-width: 1300px;
   padding: 48px 64px;
 
   & > div:first-child {
     padding: 24px;
-    border: 1px solid #bbbbbb;
+    border: 1px solid $border-primary-color;
     border-radius: 4px;
   }
 
