--- a/src/components/mainMenu/styles.scss
+++ b/src/components/mainMenu/styles.scss
@@ -1,7 +1,9 @@
+@import './../../theme/theme';
+
 .nd-main-wrapper {
   margin: 0 54px;
-  border-right: 1px solid #bbbbbb;
-  border-left: 1px solid #bbbbbb;
+  border-right: 1px solid $border-primary-color;
+  border-left: 1px solid $border-primary-color;
 
   .nd-main-menu-sider {
     display: flex;
@@ -9,13 +11,13 @@
     height: 100vh;
     padding-bottom: 24px;
     border-right: none;
-    background-color: #e9eae8;
+    background-color: $bck-primary-color;
 
     li.ant-menu-item {
       margin: 0 0 8px 0;
 
       &.ant-menu-item-active {
-        background-color: #e6f7ff;
+        background-color: $hover-primary-color;
       }
 
       &.logout {
@@ -68,7 +70,7 @@
 
   .ant-table-wrapper {
     .ant-table-content {
-      border: 1px solid #bbbbbb;
+      border: 1px solid $border-primary-color;
       border-radius: 4px;
     }
   }
@@ -84,7 +86,7 @@
       padding: 0;
 
       &:hover {
-        color: darkblue;
+        color: $hover-link-primary-color;
       }
     }
   }
