--- a/src/components/workspaces/styles.scss
+++ b/src/components/workspaces/styles.scss
@@ -1,3 +1,5 @@
+@import './../../theme/theme';
+
 .nd-workspaces-list-wrapper {
   display: flex;
   align-items: center;
@@ -16,10 +18,10 @@
       height: 100%;
       border-radius: 6px;
       background-color: #ffffff;
-      box-shadow: 2px 2px grey;
+      box-shadow: 2px 2px $shadow-primary-color;
 
       &:hover {
-        background-color: #e6f7ff;
+        background-color: $hover-primary-color;
       }
 
       span {
