- add filtering and sorting for leaves tables - refactoring

--- a/src/components/calendar/styles.scss
+++ b/src/components/calendar/styles.scss
@@ -1,7 +1,7 @@
 @import './../../theme/theme';
 
 .nd-calendar-wrapper {
-  max-width: 1300px;
+  max-width: 1200px;
   padding: 48px 64px;
 
   & > div:first-child {
@@ -10,37 +10,54 @@
     border-radius: 4px;
   }
 
-  .ant-alert {
-    max-width: 450px;
-    margin-bottom: 8px;
-    border-radius: 0;
-  }
+  .calendar {
+    background-color: darken($bck-secondary-color, 3);
 
-  .ant-fullcalendar-content {
-    pointer-events: none;
+    .ant-fullcalendar-content {
+      pointer-events: none;
 
-    span {
-      font-size: 40px;
+      span {
+        font-size: 40px;
 
-      &.holiday-date {
-        color: red;
-      }
+        &.holiday-date {
+          color: plum;
+        }
 
-      &.vacation-paid {
-        color: green;
-      }
+        &.vacation-paid {
+          color: green;
+        }
 
-      &.vacation-unpaid {
-        color: orange;
-      }
+        &.vacation-unpaid {
+          color: orange;
+        }
 
-      &.vacation-sick {
-        color: plum;
-      }
+        &.vacation-sick {
+          color: red;
+        }
 
-      &.vacation-wfh {
-        color: blue;
+        &.vacation-wfh {
+          color: blue;
+        }
       }
     }
+  }
+
+  .ant-alert {
+    max-width: 450px;
+    margin-top: 8px;
+  }
+
+  .leave-alert {
+    .ant-alert {
+      border-radius: 0;
+    }
+
+    .ant-alert-error {
+      background-color: darken(#fff1f0, 5);
+    }
+  }
+
+  .calendar-event:not(:last-child) {
+    margin-bottom: 16px;
   }
 }
