--- a/src/components/mainMenu/styles.scss
+++ b/src/components/mainMenu/styles.scss
@@ -104,3 +104,16 @@ label ~ .ant-calendar-picker,
 label ~ .ant-select {
   margin-top: 4px;
 }
+
+.form-data-wrapper {
+  width: 50vw;
+  max-width: 500px;
+  padding: 24px;
+  border: 1px solid $border-primary-color;
+  border-radius: 4px;
+  background-color: darken($bck-secondary-color, 3);
+
+  textarea {
+    resize: none;
+  }
+}
