remove ability creating a vacation if it was created that day before

--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -4,6 +4,7 @@ $bck-secondary-color: rgb(240, 242, 245);
 
 //Border colors
 $border-primary-color: #bbbbbb;
+$border-secondary-color: rgb(240, 242, 245);
 
 //Hover colors
 $hover-primary-color: #e6f7ff;
@@ -11,3 +12,4 @@ $hover-link-primary-color: darkblue;
 
 //Shadow
 $shadow-primary-color: grey;
+$shadow-secondary-color: rgb(240, 242, 245);
