- refactoring code - add some new features to Calendar section

--- a/src/theme/theme.scss
+++ b/src/theme/theme.scss
@@ -11,3 +11,13 @@ $hover-link-primary-color: darkblue;
 
 //Shadow
 $shadow-primary-color: grey;
+
+// Calendar messages
+$bg-sick-leave: #ffd9d7;
+$border-sick-leave: rgb(255, 163, 158);
+$bg-unpaid: #fffbe6;
+$border-unpaid: #ffe58f;
+$bg-paid: #f6ffed;
+$border-paid: #b7eb8f;
+$bg-wfh: #e6f7ff;
+$border-wfh: #91d5ff;
